add frenchPhoneNumberOnly + workflow.disableEmailAlerts